test/corpus/binary_ops.txt
================================================================================
simple add
================================================================================

1 + 3

--------------------------------------------------------------------------------

(program
  (binop
    (number_literal)
    (number_literal)))

================================================================================
simple mul
================================================================================

1 * 3

--------------------------------------------------------------------------------

(program
  (binop
    (number_literal)
    (number_literal)))

================================================================================
simple div
================================================================================

1 / 3

--------------------------------------------------------------------------------

(program
  (binop
    (number_literal)
    (number_literal)))

================================================================================
simple sub
================================================================================

1 - 3

--------------------------------------------------------------------------------

(program
  (binop
    (number_literal)
    (number_literal)))

================================================================================
simple lt
================================================================================

1 < 3

--------------------------------------------------------------------------------

(program
  (binop
    (number_literal)
    (number_literal)))

================================================================================
simple le
================================================================================

1 <= 3

--------------------------------------------------------------------------------

(program
  (binop
    (number_literal)
    (number_literal)))

================================================================================
simple gt
================================================================================

1 > 3

--------------------------------------------------------------------------------

(program
  (binop
    (number_literal)
    (number_literal)))

================================================================================
simple ge
================================================================================

1 >= 3

--------------------------------------------------------------------------------

(program
  (binop
    (number_literal)
    (number_literal)))

================================================================================
simple eq
================================================================================

1 = 3

--------------------------------------------------------------------------------

(program
  (binop
    (number_literal)
    (number_literal)))

================================================================================
simple neq
================================================================================

1 <> 3

--------------------------------------------------------------------------------

(program
  (binop
    (number_literal)
    (number_literal)))

================================================================================
simple and
================================================================================

1 & 3

--------------------------------------------------------------------------------

(program
  (binop
    (number_literal)
    (number_literal)))

================================================================================
simple or
================================================================================

1 | 3

--------------------------------------------------------------------------------

(program
  (binop
    (number_literal)
    (number_literal)))

================================================================================
prio mul over add
================================================================================

1 + 3 * 4

--------------------------------------------------------------------------------

(program
  (binop
    (number_literal)
    (binop
      (number_literal)
      (number_literal))))

================================================================================
prio div over add
================================================================================

1 + 3 / 4

--------------------------------------------------------------------------------

(program
  (binop
    (number_literal)
    (binop
      (number_literal)
      (number_literal))))

================================================================================
associativity
================================================================================

1 * 2 * 3

--------------------------------------------------------------------------------

(program
  (binop
    (binop
      (number_literal)
      (number_literal))
    (number_literal)))

================================================================================
parenthesis priority
================================================================================

(1 + 2) * 3

--------------------------------------------------------------------------------

(program
  (binop
    (binop
      (number_literal)
      (number_literal))
    (number_literal)))
