test/corpus/comments.txt
================================================================================
empty_comment
================================================================================

/**/

--------------------------------------------------------------------------------

(program
  (comment))

================================================================================
code_between_comments
================================================================================

/* foo */
nil
/** bar */

--------------------------------------------------------------------------------

(program
  (comment)
    (nil)
  (comment))

================================================================================
nested_comments
================================================================================

/* /* foo */ */

--------------------------------------------------------------------------------

(program
  (comment))

================================================================================
comment_with_stars
================================================================================

/**********/

--------------------------------------------------------------------------------

(program
  (comment))

================================================================================
comment_with_slashes
================================================================================

/* /////////// */

--------------------------------------------------------------------------------

(program
  (comment))

================================================================================
unfinished_comment
================================================================================

/* Hello

--------------------------------------------------------------------------------

(program
  (ERROR)
    (lvalue (id)))
