test/corpus/control_blocks.txt
================================================================================
simple if
================================================================================

if nil then 5

--------------------------------------------------------------------------------

(program
    (if_expr
        condition: (nil)
        body: (number_literal)))

================================================================================
if with else
================================================================================

if nil then nil else nil

--------------------------------------------------------------------------------

(program
    (if_expr
        condition: (nil)
        body: (nil)
        else: (nil)))

================================================================================
if in if condition
================================================================================

if if nil then nil then nil

--------------------------------------------------------------------------------

(program
    (if_expr
        condition: (if_expr
            condition: (nil)
            body: (nil))
        body: (nil)))

================================================================================
if in if body
================================================================================

if nil then if nil then nil else nil

--------------------------------------------------------------------------------

(program
    (if_expr
        condition: (nil)
        body: (if_expr
            condition: (nil)
            body: (nil)
            else: (nil))))

================================================================================
while expression
================================================================================

while nil do nil

--------------------------------------------------------------------------------

(program
    (while_expr
        condition: (nil)
        body: (nil)))

================================================================================
for expression
================================================================================

for var := 0 to 10 do nil

--------------------------------------------------------------------------------

(program
    (for_expr
        var: (id)
        var_start: (number_literal)
        var_end: (number_literal)
        body: (nil)))

================================================================================
let expression
================================================================================

let 
in
    10
end

--------------------------------------------------------------------------------

(program
    (let_expr
    exp: (number_literal)))
