test/corpus/expressions.txt
================================================================================
test_nil_is_program
================================================================================

nil

--------------------------------------------------------------------------------

(program
    (tok_nil))

================================================================================
test_number_1
================================================================================

1

--------------------------------------------------------------------------------

(program
    (number_literal))

================================================================================
test_number_45
================================================================================

45

--------------------------------------------------------------------------------

(program
    (number_literal))

================================================================================
test_string_empty
================================================================================

""

--------------------------------------------------------------------------------

(program
    (string_literal))

================================================================================
test_string_simple
================================================================================

"Hello World"

--------------------------------------------------------------------------------

(program
    (string_literal))

================================================================================
string_escapes
================================================================================

"\"Hi\xff"

--------------------------------------------------------------------------------

(program
    (string_literal))